--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
